Initial commit: add Resurrection Ark mod base